buildHTTPHeaders() should use a StringBuilder instead of a Vector<UChar> https://bugs.webkit.org/show_bug.cgi?id=100580

Reviewed by Oliver Hunt.

Replaced Vector<UChar> with StringBuilder in the HTTP header construction function buildHTTPHeaders.
This eliminates 8 -> 16 bit up conversion of the strings involved.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::buildHTTPHeaders):


git-svn-id: svn://svn.chromium.org/blink/trunk@132734 bbb929c8-8fbe-4397-9dbb-9b2b20218538